# ascii-parser

./: .gitignore  LICENSE  README.md  img.txt  meson.build  pp.txt  renato.txt  renato2.txt  renato3.txt  run.sh
.cache/clangd/index/: logic.c.9BA2383A911DA9EF.idx  logic.h.907996C0EDBBA248.idx  main.c.39AAB614C6BBB4CD.idx  parse2ASCII.c.F7314DB7FB1B4B1F.idx  parse2ASCII.h.6D3902240D43A70D.idx  render.c.647561CB86E86D90.idx  render.h.40B8E59477548987.idx  stb_image.h.CA0B64DDD0E5A5EE.idx  stb_image_write.h.FABDD29E885BAE0C.idx  stb_truetype.h.0E3AE26627D8B01F.idx
data/: resources.gresource.xml
data/ui/: ascii-parser.blp  dec2bin.blp  loading_modal.blp  process_win.blp
examples/: fuji.txt  hand.txt  shoe.txt  woman.txt
include/: about_gtk.h  ascii_gtk.h  logic.h  render.h  types.h  utils.h
src/: about_gtk.c  ascii_gtk.c  logic.c  main.c  render.c  utils.c
